--- a/views/add.hbs
+++ b/views/add.hbs
@@ -32,7 +32,7 @@
                       data-success="OK">Выбрать город (обязательно)</span>
             </div>
             <div class="input-field col s10">
-                <input id="address" type="text" class="validate validateMain" name="address" required minlength="4">
+                <input id="address" type="text" class="validate validateMain" name="address" required pattern="[A-Za-zА-Яа-яЁё]{3,20}">
 
                 <label for="address"><i class="fas fa-user-cog"></i>Адрес</label>
                 <span class="helper-text" data-error="Укажите адрес"
@@ -41,31 +41,29 @@
 
             <div class="input-field col m4 s8">
                 <input id="name" type="text" class="validate validateMain" name="name" required
-                       pattern="[A-Za-zА-Яа-яЁё]{3,}">
+                       pattern="[A-Za-zА-Яа-яЁё]{3,15}">
                 <label for="name"><i class="fas fa-user-cog"></i>Имя</label>
                 <span class="helper-text" data-error="Укажите имя минимум 3 символа" data-success="OK">Укажите имя (обязательно)</span>
             </div>
 
             <div class="input-field col s4">
-                <input id="age" type="number" class="validate validateMain" name="paramModel[]" required
-                       pattern="[0-9]{2}">
+                <input id="age" type="text" class="validate validateMain" name="paramModel[]" required pattern="[0-9]{2}">
                 <label for="age"><i class="fas fa-user-cog"></i>Возраст</label>
                 <span class="helper-text" data-error="Укажите возраст только цифры" data-success="OK">Укажите возраст (обязательно)</span>
             </div>
             <div class="input-field col s4">
-                <input id="growth" type="number" class="validate validateMain" name="paramModel[]" required
+                <input id="growth" type="text" class="validate validateMain" name="paramModel[]" required
                        pattern="[0-9]{3}">
                 <label for="growth"><i class="fas fa-user-cog"></i>Рост</label>
                 <span class="helper-text" data-error="Укажите рост только цифры" data-success="OK">Укажите рост (обязательно)</span>
             </div>
             <div class="input-field col s4">
-                <input id="weight" type="number" class="validate validateMain" name="paramModel[]" required
-                       pattern="[0-9]{1,3}">
+                <input id="weight" type="text" class="validate validateMain" name="paramModel[]" required pattern="[0-9]{1,3}">
                 <label for="weight"><i class="fas fa-user-cog"></i>Вес</label>
                 <span class="helper-text" data-error="Укажите вес только цифры" data-success="OK">Укажите вес (обязательно)</span>
             </div>
             <div class="input-field col s4">
-                <input id="chest" type="number" class="validate validateMain" name="paramModel[]" required>
+                <input id="chest" type="text" class="validate validateMain" name="paramModel[]" required pattern="[0-9]{1}">
                 <label for="chest"><i class="fas fa-user-cog"></i>Грудь</label>
                 <span class="helper-text" data-error="Укажите размер только цифры" data-success="OK">Укажите размер (обязательно)</span>
             </div>
@@ -125,8 +123,8 @@
 
             <div class="file-field input-field">
                 <div class="btn">
-                    <input type="file" class="validate validateMain" name="photo[]" multiple id="photo" required>
                     <label for="photo">Доабавить фото</label>
+                    <input type="file" class="validate validateMain" name="photo[]" multiple id="photo" required>
                     <span class="helper-text" data-error="Добавьте не менее двух фото" data-success="OK"></span>
                 </div>
                 <div class="file-path-wrapper">
@@ -340,12 +338,25 @@
                 </label>
 
             </p>
-
+            <button class="btn waves-effect waves-light" id="btn-lk" type="submit">Добавить
+                <i class="material-icons right">send</i>
+            </button>
         </div>
-        <button class="btn waves-effect waves-light" id="btn-lk" type="submit">Добавить
-            <i class="material-icons right">send</i>
-        </button>
+
     </form>
 </div>
-
-
+<style>
+</style>
+<script>
+    let form = document.getElementById('formMain')
+    console.log(form)
+    form.onchange = function (event){
+        if(event.target.validity.valid === false){
+            event.target.closest('div').style.backgroundColor = 'rgba(247,43,11,0.51)'
+            console.log(false)
+        }else{
+            event.target.closest('div').style.backgroundColor = 'white'
+            console.log(true)
+        }
+    }
+</script>
