--- a/public/style.css
+++ b/public/style.css
@@ -454,3 +454,12 @@ form > .range-field {
 ul:not(.browser-default) {
     margin-top: -3px;
 }
+#spinner{
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
