--- a/views/city.hbs
+++ b/views/city.hbs
@@ -1,6 +1,6 @@
 <div class="parallax-container">
     <div class="parallax"><img
-            src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/6b47f30d-8a0f-4acd-8f75-10616e25b410/d76xl8c-e1b9b33e-d60f-4070-be51-421f39ea80dc.jpg/v1/fill/w_1131,h_707,q_70,strp/natalia_siwiec_wallpaper_7_by_balhirath_d76xl8c-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD0xMjAwIiwicGF0aCI6IlwvZlwvNmI0N2YzMGQtOGEwZi00YWNkLThmNzUtMTA2MTZlMjViNDEwXC9kNzZ4bDhjLWUxYjliMzNlLWQ2MGYtNDA3MC1iZTUxLTQyMWYzOWVhODBkYy5qcGciLCJ3aWR0aCI6Ijw9MTkyMCJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTppbWFnZS5vcGVyYXRpb25zIl19.rbk4b3dLg2jmL_UMn29yAJDl3bbMrfQajV_XT502YRI">
+            src="images/bb2e0c216294550963fc8163eccdc23c.jpg">
     </div>
     </br>
     <h1>Проститутки<br> {{headCity}}</h1>
