--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -1,6 +1,6 @@
 <div class="parallax-container">
     <div class="parallax moadel">
-        <img id="imgParallax" src="https://zodaikapp.s3.us-east-2.amazonaws.com/039f86b23af7.jpg">
+        <img id="imgParallax" src="images/bb2e0c216294550963fc8163eccdc23c.jpg">
     </div>
     <h1>ESCORT Ukraine</h1>
     <div class="fil-btn">
