--- a/views/city.hbs
+++ b/views/city.hbs
@@ -1,6 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img
-            src="images/bb2e0c216294550963fc8163eccdc23c.jpg">
+    <div class="parallax"><img src="/images/dita-von-teese-fredericks-of-hollywood.jpg">
     </div>
     </br>
     <h1>Проститутки<br> {{headCity}}</h1>
