--- a/views/city.hbs
+++ b/views/city.hbs
@@ -1,7 +1,6 @@
 <div class="parallax-container">
     <div class="parallax"><img src="/images/dita-von-teese-fredericks-of-hollywood.jpg">
     </div>
-    </br>
     <h1>Проститутки<br> {{headCity}}</h1>
     <div class="fil-btn">
         <ul id="dropdown2" class="dropdown-content">
@@ -19,7 +18,7 @@
         </ul>
         <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Фильтры<i class="material-icons right">arrow_drop_down</i></a>
     </div>
-</div></br>
+</div>
 <h4 class="zag">
     <hr>
     Проститутки {{headCity}}
