--- a/views/city.hbs
+++ b/views/city.hbs
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img src="/images/dita-von-teese-fredericks-of-hollywood.jpg">
+    <div class="parallax"><img src="/images/2.jpg">
     </div>
     <h1>Проститутки<br> {{headCity}}</h1>
     <div class="fil-btn">
