--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -1,8 +1,8 @@
 <div class="parallax-container">
     <div class="parallax moadel">
-        <img id="imgParallax" src="/images/bb2e0c216294550963fc8163eccdc23c.jpg">
+        <img id="imgParallax" src="/images/2.jpg">
     </div>
-    <h1>ESCORT Ukraine</h1>
+    <h1>ESCORT</h1>
     <div class="fil-btn">
         <ul id="dropdown2" class="dropdown-content">
             <li><a href="/sort/asc">Дорогие</a></li>
@@ -63,11 +63,5 @@
             <</a></h5>
 {{/if}}
 <script>
-    let imgParallax = document.getElementById('imgParallax')
-
-    console.log(window.matchMedia(`(min-width: 600px)`).matches)
-    if (window.matchMedia(`(min-width: 600px)`).matches) {
-        imgParallax.setAttribute('src', 'https://progorodsamara.ru/userfiles/picoriginal/img-20170118103115-872.jpg')
-    }
 
 </script>
