--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -21,7 +21,7 @@
 <div class="sidenav" id="mobile-demo">
         <div class="user-view">
             <div class="background">
-                <img class="imgNav" src="https://cdn.pixabay.com/photo/2016/03/15/17/17/girl-1258739_1280.jpg">
+                <img class="imgNav" src="/images/6.jpg">
 
             </div>
             {{#if user.login}}
