--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img class="imgParralax" src="https://images.pexels.com/photos/5880146/pexels-photo-5880146.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"></div>
+    <div class="parallax"><img class="imgParralax" src="/images/1.jpg"></div>
     <h3>ZODIAK</h3>
     <h5>The Best Escort Models in Ukraine. Individual escort luxury</h5>
 </div>
@@ -12,7 +12,7 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="https://pics.uescort.com/images/400x600/23/766/arg_13x0/40a81a1e850ceb110adbdf74156f0011.jpeg">
+                    <img src="/images/9.jpg">
                     <h2 class="card-title">Эскорт Украина</h2>
                     <a href="/escort" class="btn-floating halfway-fab waves-effect waves-light orange pulse"><i
                             class="material-icons">star_border
@@ -27,7 +27,7 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="https://pics.uescort.com/images/400x600/23/766/arg_0x84/ea4e8eb144b6d8b622af4c6d6c245c95.jpeg">
+                    <img src="/images/6.jpg">
                     <h2 class="card-title">LUX ESCORT</h2>
                     <a href="/lux" class="btn-floating halfway-fab waves-effect waves-light yellow accent-4 pulse"><i
                             class="material-icons">stars</i></a>
@@ -40,8 +40,8 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="https://pics.uescort.com/images/400x600/23/766/arg_0x81/15fc44f01b3c5800271dddd2f6e919f7.jpeg">
-                    <span class="card-title">Card Title</span>
+                    <img src="/images/5.jpg">
+                    <span class="card-title">Вакансии</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light orange accent-4 pulse"><i
                             class="material-icons">star</i></a>
                 </div>
