--- a/views/model.hbs
+++ b/views/model.hbs
@@ -1,8 +1,7 @@
 <div class="parallax-container">
-    <div class="parallax">
+    <div class="parallax par--lk">
         <img src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{object.photo.[0]}}">
     </div>
-    </br>
     <h1>{{object.name}}
         {{#if object.veryfication}}
             <i class="fas fa-check-circle"></i></span><br>
