--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,9 @@ body{
     filter: drop-shadow(1px 2px 3px black);
     font-size: xx-large;
 }
+.par--lk > img{
+    max-width: 450px;
+}
 .model > img{
     max-width: 400px;
     min-height: 600px;
