--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <div class="parallax-container">
-    <div class="parallax"><img class="imgParralax" src="/images/1.jpg"></div>
+    <div class="parallax">
+        <img class="imgParralax" id="imgParallax" src="/images/1.jpg"></div>
     <h3>ZODIAK</h3>
     <h5>The Best Escort Models in Ukraine. Individual escort luxury</h5>
 </div>
@@ -19,7 +20,7 @@
                     </i></a>
                 </div>
                 <div class="card-content">
-                    <p>Лучшие индивидулки Украины на портале ZODAIK.Самые лучшие проституки с реальными фотографиями.
+                    <p>Лучшие индивидуалки Украины на портале ZODAIK.Самые лучшие проститутки и эскортницы с реальными фотографиями.
                     Отзвы от реальных пользователей.</p>
                 </div>
             </div>
@@ -33,7 +34,7 @@
                             class="material-icons">stars</i></a>
                 </div>
                 <div class="card-content">
-                    <p>В данном разделе представленны тольк эксклюзивные предложения. Досутп к данному разделу ограничен.</p>
+                    <p>В данном разделе представленны тольк эксклюзивные предложения от лучших эскортниц.</p><i>Досутп к данному разделу ограничен.</i>
                 </div>
             </div>
         </div>
@@ -46,8 +47,7 @@
                             class="material-icons">star</i></a>
                 </div>
                 <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient
-                        because I require little markup to use effectively.</p>
+                    <p>Самые выгодные предложения работы на ZODIAK. Лучшие условия от проверенных рекламодателей</p>
                 </div>
             </div>
         </div>
