--- a/views/sort.hbs
+++ b/views/sort.hbs
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img style="height: 260px;
+    <div class="parallax"><img id="imgParallax" style="height: 260px;
     object-fit: cover;" src="/images/2.jpg">
     </div>
     <h1>ESCORT<br>{{cityes.nameEn}}</h1>
