--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -25,6 +25,7 @@
                         <span class="helper-text" data-error="Введите пароль" data-success=""></span>
 
                     </div>
+                    <p class=""><a href="/reset">Восстановить пароль</a></p>
                     <button id="loginBtn" class="btn waves-effect waves-light" type="submit">Войти
                         <i class="material-icons right"></i>
                     </button>
