--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -4,12 +4,20 @@
     </div>
     <h1>ESCORT</h1>
     <div class="fil-btn">
-        <ul id="dropdown2" class="dropdown-content">
-            <li><a href="/sort/asc">Дорогие</a></li>
-            <li><a href="/sort/desc">Дешевые</a></li>
-            <li><a href="/sort/very">Проверенные</a></li>
-            <li><a href="/sort/reiting">Высокий рейтинг</a></li>
-        </ul>
+<!--        <ul id="dropdown2" class="dropdown-content">-->
+<!--            <li><a href="/sort/asc">Дорогие</a></li>-->
+<!--            <li><a href="/sort/desc">Дешевые</a></li>-->
+<!--            <li><a href="/sort/very">Проверенные</a></li>-->
+<!--            <li><a href="/sort/reiting">Высокий рейтинг</a></li>-->
+
+            <div id="dropdown2" class="dropdown-content collection">
+                <a href="/sort/asc" class="collection-item">Дорогие</a>
+                <a href="/sort/desc" class="collection-item">Дешевые</a>
+                <a href="/sort/very" class="collection-item">Проверенные</a>
+                <a href="/sort/reiting" class="collection-item">Высокий рейтинг</a>
+            </div>
+
+<!--        </ul>-->
         <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Фильтры<i class="material-icons right">arrow_drop_down</i></a>
     </div>
 </div>
