--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -4,21 +4,22 @@
     </div>
     <h1>ESCORT</h1>
     <div class="fil-btn">
-<!--        <ul id="dropdown2" class="dropdown-content">-->
-<!--            <li><a href="/sort/asc">Дорогие</a></li>-->
-<!--            <li><a href="/sort/desc">Дешевые</a></li>-->
-<!--            <li><a href="/sort/very">Проверенные</a></li>-->
-<!--            <li><a href="/sort/reiting">Высокий рейтинг</a></li>-->
+        <!--        <ul id="dropdown2" class="dropdown-content">-->
+        <!--            <li><a href="/sort/asc">Дорогие</a></li>-->
+        <!--            <li><a href="/sort/desc">Дешевые</a></li>-->
+        <!--            <li><a href="/sort/very">Проверенные</a></li>-->
+        <!--            <li><a href="/sort/reiting">Высокий рейтинг</a></li>-->
+        <!--        </ul>-->
+        <!--        <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Фильтры<i class="material-icons right">arrow_drop_down</i></a>-->
+<!--        <div class="myBtn"><strong>Фильтр</strong><i class="material-icons right">arrow_drop_down</i></div>-->
 
-            <div id="dropdown2" class="dropdown-content collection">
-                <a href="/sort/asc" class="collection-item">Дорогие</a>
-                <a href="/sort/desc" class="collection-item">Дешевые</a>
-                <a href="/sort/very" class="collection-item">Проверенные</a>
-                <a href="/sort/reiting" class="collection-item">Высокий рейтинг</a>
-            </div>
-
-<!--        </ul>-->
-        <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Фильтры<i class="material-icons right">arrow_drop_down</i></a>
+        <a name="label--drop-down" class="waves-effect waves-light btn-small"><i class="material-icons right">arrow_drop_down</i>Филтры</a>
+        <div class="status drop--down" style="height: 47%">
+            <li><a class="href--city" href="/sort/asc">Дорогие</a></li>
+            <li><a class="href--city" href="/sort/desc">Дешевые</a></li>
+            <li><a class="href--city" href="/sort/very">Проверенные</a></li>
+            <li><a class="href--city" href="/sort/reiting">Высокий рейтинг</a></li>
+        </div>
     </div>
 </div>
 <h4 class="zag">
@@ -69,6 +70,6 @@
                 class="large material-icons">arrow_back</i>
             <</a></h5>
 {{/if}}
-<script>
+<style>
 
-</script>
+</style>
