--- a/views/city.hbs
+++ b/views/city.hbs
@@ -43,20 +43,6 @@
                 </ul>
             {{/if}}
         </div>
-<!--        <ul id="dropdown2" class="dropdown-content">-->
-<!--            {{#if cityes}}-->
-<!--                <li><a href="/city/{{cityes.nameEn}}/sort/asc">Дорогие</a></li>-->
-<!--                <li><a href="/city/{{cityes.nameEn}}/sort/desc">Дешевые</a></li>-->
-<!--                <li><a href="/city/{{cityes.nameEn}}/sort/very">Проверенные</a></li>-->
-<!--                <li><a href="/city/{{cityes.nameEn}}/sort/reiting">Высокий рейтинг</a></li>-->
-<!--            {{else}}-->
-<!--                <li><a href="/sort/asc">Дорогие</a></li>-->
-<!--                <li><a href="/sort/desc">Дешевые</a></li>-->
-<!--                <li><a href="/sort/very">Проверенные</a></li>-->
-<!--                <li><a href="/sort/reiting">Высокий рейтинг</a></li>-->
-<!--            {{/if}}-->
-<!--        </ul>-->
-<!--        <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Фильтры<i class="material-icons right">arrow_drop_down</i></a>-->
     </div>
 </div>
 <h4 class="zag">
@@ -92,8 +78,9 @@
     </div>
 {{else}}
     <h5 class="pagination">Оъявлений нет
-    <a href="/escort" class="btn-floating waves-effect waves-light blue-grey lighten-3"> <i class="large material-icons">arrow_back</i>
-        <</a></h5>
+        <a href="/escort" class="btn-floating waves-effect waves-light blue-grey lighten-3"> <i
+                class="large material-icons">arrow_back</i>
+            <</a></h5>
 {{/if}}
 
 {{#if page}}
