--- a/views/city.hbs
+++ b/views/city.hbs
@@ -47,7 +47,7 @@
 </div>
 <h4 class="zag">
     <hr>
-    Проститутки {{headCity}}
+    Индивидуалки {{headCity}}
     <hr>
 </h4>
 {{#if object.length}}
@@ -59,7 +59,7 @@
 
                 <a href="/id/{{id}}">
                     <div class="card-image es">
-                        <img src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{photo.[0]}}" alt="Escort Ukraine">
+                        <img src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{photo.[0]}}" alt="{{title}}">
                         <div class="card-title">
                             <span>{{city}}</span><br>
                         <span>{{name}}
