--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -47,7 +47,7 @@
         {{/if}}
         {{#if city}}
         <div name="label--drop-down" class="drop-down lab"><strong>Выбрать город</strong></div>
-        <div class="status drop--down">
+        <div class="status drop--down" id="parentDrop">
             {{#each city}}
                 <div name="label--drop-down" class="drop-down nameCity"><strong>{{name}}</strong></div>
                 <div class="status drop--down">
